scss/components/cards/_events.scss
.event{

	margin: 20px 15px;
	max-width: 100%;
	 
	h2 {
		color: #fff;
		font-size: 18px;
		line-height: 24px;
		padding: 15px;
		margin: 0px;
		border-top-left-radius: 4px;
		border-top-right-radius: 4px;
	}

	h3{
		font-size: 18px;
		line-height: 36px;
		margin: 0px;
	}

	.content {
		background: #fff;
		padding: 15px;
		border: 1px solid #ddd;
		border-top: 0px;
	}

	p {
		font-family: 'Trade Gothic Next W01', Arial, sans-serif;
		font-size: 14px;
		line-height: 20px;
		color: #333;
		margin-bottom: 10px;
	}
	
	i {
		margin: 5px;
		color: #990000;
	}

	.register {
		background-color: #eee;
		padding: 15px 5px 5px;
		color: #333;
		border: 1px solid #ddd;
		border-top: 0px;

		i {

			color: #6a6a6a;
		}

		p {
			text-align: center;
		}

		a {
			border-radius: 3px;
			border: 1px solid #333;
			padding: 5px 10px;
			color: #6a6a6a;
			margin-right: 5px
		}
	}
}

@media (max-width: 1200px) {

	.register {

		a {
			display: block;
			margin-bottom: 1em;
		}	
	}
}
@media (max-width: 990px) {

	.register {

		a {
			display: inline;
		}	
	}
}

